--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
       width: 100%;
       height: 100vh; /* 100% of viewport height */
       border: none;
+      overflow: hidden;
     }
   </style>
 </head>
