--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
   <iframe 
     src="https://script.google.com/macros/s/AKfycbx-Np6eMnceMmR06MgzogguPYfEE3WQ5JGBF-WRfqa9H9CoKeDnHeIXlciD9XPYMBAJyg/exec" 
     allow="clipboard-write"
+    scrolling="no"
   ></iframe>
 </body>
 </html>
